--- a/quiz/templates/index.html
+++ b/quiz/templates/index.html
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html lang="pl">
-<!--
-   index.html
--->
+{% extends "szablon.html" %}
+{% block tytul %}Aplikacja Quiz{% endblock %}
+{% block h1 %}Aplikacja Quiz{% endblock %}
+{% block tresc %}Pytania i odpowiedzi{% endblock %}
 
-<head>
-<meta charset="utf-8" />
-  <title>Aplikaca QUIZ</title>
-</head>
 
-<body>
-
-  <h1>Aplikaca QUIZ,</h1>
-  <p> Pytania i odpowiedzi </p>
-  <p><a href = http://127.0.0.1:5000/strona> strona </a></p>
-  <p><a href = http://127.0.0.1:5000/klasa> klasa </a></p>
-
-</body>
-
-</html>
